--- a/style.css
+++ b/style.css
@@ -9,17 +9,20 @@
     font-family: 'Inter', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 /* Header CSS */
 
 .navbar{
     height: 10vh;
     width: 100%;
-    /* border: 2px solid; */
-    margin-top: 10px;
     padding: 40px 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .navbar .logo a{
@@ -59,9 +62,13 @@
 
 }
 
-/* .navbar .menu ul a:hover{
-
-} */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgb(255 255 255);
+    box-shadow: 0px 0px 5px 1px rgb(196 196 196);
+}
 
 .button .primaryButton{
     background: #1361F5;
@@ -676,4 +683,3 @@ footer .content .section-4 .footerContent .singleBlog a {
     font-size: 14px;
     font-weight: 500;
 }               /* Footer Section CSS End */
-
